# pdf-mixer

./: CMakeLists.txt  README.md
cmake/: magick.cmake
include/: pdf.hpp
include/array2/: ar15.json  array.json
include/array8/: array8.json
src/: main.cpp  pdf.cpp
